<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="advancedSettings">Advanced Settings</string>
    <string name="imageSize">Image Size</string>
    <string name="colorFilter">Color Filter</string>
    <string name="imageType">Image Type</string>
    <string name="siteFilter">Site Filter</string>
    <string name="save">Save</string>
    
    <string-array name="image_colors">
        <item name="color_all">all</item>
        <item name="color_black">black</item>
        <item name="color_blue">blue</item>
        <item name="color_brown">brown</item>
        <item name="color_gray">gray</item>
        <item name="color_green">green</item>
        <item name="color_orange">orange</item>
        <item name="color_pink">pink</item>
        <item name="color_purple">purple</item>
        <item name="color_red">red</item>
        <item name="color_teal">teal</item>
        <item name="color_white">white</item>
        <item name="color_yellow">yellow</item>
    </string-array>
    
    <string-array name="image_types">
        <item name="type_all">all</item>
        <item name="type_face">face</item>
        <item name="type_photo">photo</item>
        <item name="type_clipart">clip art</item>
        <item name="type_lineart">line art</item>
    </string-array>
    
    <string-array name="image_sizes">
        <item name="size_all">all</item>
        <item name="size_small">small</item>
        <item name="size_medium">medium</item>
        <item name="size_large">large</item>
        <item name="size_xlarge">extra large</item>
    </string-array>
        <string name="search">Search</string>

</resources>
